type corrections
